# sigla

./: .coverage  .coveragerc  .flake8  .gitignore  LICENSE  Makefile  README.md  gen.py  pyproject.toml  pytest.ini  sandbox.py  sigla.xml  ut.py  ut.xml
.sigla/: config.ini  config.json  filters.py
.sigla/definitions/: apifier.xml  definition-table.xml  helllo.xml  person.xml  sandbox.xml  seed.xml  test.xml  ut.xml
.sigla/templates/: apifier_block.jinja2  apifier_call.jinja2  apifier_crud.jinja2  div.jinja2  helllo.jinja2  person.jinja2  wrapped-value.jinja2
_.sigla/: filters.py
_.sigla/definitions/: lalala.xml  local.xml
_.sigla/scripts/: local.py
_.sigla/templates/: local.jinja2  test.jinja2  ut.jinja2
definitions/: definition-form.xml  definition-table.xml  seed.xml
helpers/: helpers.py
scripts/: publish.sh
sigla/: ABC.py  Attributes.py  Config.py  FrontMatter.py  __init__.py  actions.py  config.py  filters.py  front_matter.py  helpers.py  main.py  node_factory.py  node_loaders.py  sigla.py  types.py  utils.py
sigla/actions/: actions.py
sigla/classes/: CliConfig.py  CliEntityConfigFactory.py  Config.py  FrontMatter.py  ImportNode.py  SnapshotCli.py  errors.py
sigla/cli/: CliConfig.py  SnapshotCli.py  actions.py  cli.py  commands.py  constants.py  definition_file.py  filter_collector.py  filters.py  helpers.py  utils.py
sigla/conf/: config.py
sigla/core/: renders.py
sigla/data/: Data.py  data.py  data_finder.py  errors.py  helpers.py  loaders.py  validation.py
sigla/engines/: engine.py  engines.py  sigla_engine.py
sigla/frontmatter/: frontmatter.py
sigla/lib/: Config.py  (+2 more)
sigla_cli/: cli.py
tests/: test_001_basic_structures.py  test_001_nodes.py  test_002_convert_to_internal_classes.py  test_actions.py  test_casting.py  test_cli_actions.py  test_config_obj.py  test_convert_to_internal_classes.py  test_data.py  test_data_class.py  test_data_from_xml.py  test_file_node.py  test_node.py  test_node_list.py  test_other.py  test_rendering.py  test_saving.py  test_ui.py  test_z_file_node.py  test_z_other.py  test_z_rendering.py  test_z_saving.py
(+211 files in other folders)
