[tool.poetry]
name = "sigla"
version = "0.0.14"
description = ""
authors = ["mg santos <mauro.goncalo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
click = "^7.1.2"
pydash = "^4.9.1"
python-frontmatter = "^0.5.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
mypy = "^0.790"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sigla = "sigla_cli.cli:cli"