[tool.poetry]
name = "sigla"
version = "0.0.58"
description = "Yet another code generator"
authors = ["mg santos <mauro.goncalo@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.2"
pydash = "^4.9.1"
python-frontmatter = "^0.5.0"
configparser = "^5.0.1"
pretty-errors = "^1.2.19"
typer = "^0.3.2"
shellingham = "^1.4.0"
environ-config = "^20.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8.4"
mypy = "^0.812"
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sigla = "sigla.cli.cli:app"
